--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div class="container">
             <img src="https://via.placeholder.com/150" alt="Marco De Luca" class="profile-img">
             <h1 data-i18n="name">Marco De Luca</h1>
-            <p class="tagline" data-i18n="tagline">Sviluppatore Java | Security Specialist</p>
+            <p class="tagline" data-i18n="tagline">Informatico | Security Specialist</p>
             
             <div class="contact-info">
                 <div class="contact-item">
@@ -677,7 +677,7 @@
             },
             'en': {
                 'name': 'Marco De Luca',
-                'tagline': 'Java Developer | Security Specialist',
+                'tagline': 'Computer Scientist | Security Specialist',
                 'location': 'Lanciano, Italy',
                 'about.title': 'Professional Profile',
                 'about.description': 'Master\'s student in Cybersecurity with experience in Java development and IT consulting. Passionate about creating secure and efficient software solutions with a methodical and results-oriented approach.',
