--- a/index.html
+++ b/index.html
@@ -1211,9 +1211,9 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/marco-de-luca" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/marcodeluca" aria-label="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://twitter.com/marcodeluca" aria-label="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com" aria-label="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://twitter.com/" aria-label="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="mailto:marcodeluca99@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
             <p class="copyright" data-i18n="footer.copyright">© 2024 Marco De Luca. Tutti i diritti riservati.</p>
