--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
                 <a href="https://wa.me/393286483074" class="btn btn-outline">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
-                <a href="https://www.linkedin.com/in/marco-de-luca" class="btn btn-outline" target="_blank">
+                <a href="https://www.linkedin.com/" class="btn btn-outline" target="_blank">
                     <i class="fab fa-linkedin-in"></i> LinkedIn
                 </a>
             </div>
