--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         .contact-item {
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 12px;
             padding: 16px 24px;
             border-radius: 50px;
@@ -190,6 +191,8 @@
             color: white;
             text-decoration: none;
             cursor: pointer;
+            min-width: 200px;
+            height: 50px;
         }
 
         .contact-item:hover {
@@ -829,14 +832,27 @@
             align-items: center;
         }
 
-        .form-control:invalid {
+        .form-control:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.2);
+        }
+
+        .form-control.error {
             border-color: var(--error);
             box-shadow: 0 0 0 3px rgba(245, 101, 101, 0.1);
         }
 
-        .form-control:valid {
+        .form-control.valid {
             border-color: var(--success);
             box-shadow: 0 0 0 3px rgba(72, 187, 120, 0.1);
+        }
+
+        /* Contact buttons uniform size */
+        .contact-btn {
+            min-width: 180px !important;
+            height: 50px !important;
+            justify-content: center;
         }
 
         /* Footer */
@@ -1088,6 +1104,11 @@
                 height: 45px;
             }
 
+            .contact-btn {
+                min-width: 160px !important;
+                height: 45px !important;
+            }
+
             .cv-download {
                 padding: 40px 24px;
                 min-height: 250px;
@@ -1137,6 +1158,11 @@
                 font-size: 0.9rem;
                 min-width: 120px;
                 height: 40px;
+            }
+
+            .contact-btn {
+                min-width: 140px !important;
+                height: 40px !important;
             }
 
             .social-links {
@@ -1500,19 +1526,19 @@
                 <form id="contactForm">
                     <div class="form-group">
                         <label for="name" class="form-label">Nome *</label>
-                        <input type="text" id="name" name="name" class="form-control" required placeholder="Il tuo nome completo">
+                        <input type="text" id="name" name="name" class="form-control" placeholder="Il tuo nome completo">
                     </div>
                     <div class="form-group">
                         <label for="email" class="form-label">Email *</label>
-                        <input type="email" id="email" name="email" class="form-control" required placeholder="La tua email">
+                        <input type="email" id="email" name="email" class="form-control" placeholder="La tua email">
                     </div>
                     <div class="form-group">
                         <label for="subject" class="form-label">Oggetto *</label>
-                        <input type="text" id="subject" name="subject" class="form-control" required placeholder="Oggetto del messaggio">
+                        <input type="text" id="subject" name="subject" class="form-control" placeholder="Oggetto del messaggio">
                     </div>
                     <div class="form-group">
                         <label for="message" class="form-label">Messaggio *</label>
-                        <textarea id="message" name="message" class="form-control" required placeholder="Scrivi il tuo messaggio qui..." minlength="10"></textarea>
+                        <textarea id="message" name="message" class="form-control" placeholder="Scrivi il tuo messaggio qui..." minlength="10"></textarea>
                     </div>
                     <div class="form-group">
                         <div class="g-recaptcha" data-sitekey="6LcXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"></div>
@@ -1525,16 +1551,16 @@
             </div>
             
             <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 40px;" class="fade-in delay-2">
-                <a href="mailto:marcodeluca99@gmail.com" class="btn btn-outline">
+                <a href="mailto:marcodeluca99@gmail.com" class="btn btn-outline contact-btn">
                     <i class="fas fa-envelope"></i> <span data-i18n="contact.email">Email</span>
                 </a>
-                <a href="tel:+393286483074" class="btn btn-outline">
+                <a href="tel:+393286483074" class="btn btn-outline contact-btn">
                     <i class="fas fa-phone"></i> <span data-i18n="contact.phone">Telefono</span>
                 </a>
-                <a href="https://wa.me/393286483074" class="btn btn-outline">
+                <a href="https://wa.me/393286483074" class="btn btn-outline contact-btn">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
-                <a href="https://www.linkedin.com/" class="btn btn-outline" target="_blank">
+                <a href="https://www.linkedin.com/" class="btn btn-outline contact-btn" target="_blank">
                     <i class="fab fa-linkedin-in"></i> LinkedIn
                 </a>
             </div>
@@ -1826,6 +1852,15 @@
         // Real-time validation
         const formInputs = contactForm.querySelectorAll('input, textarea');
         formInputs.forEach(input => {
+            input.addEventListener('focus', () => {
+                // Remove any existing error styling when user starts typing
+                input.classList.remove('error', 'valid');
+                const existingError = input.parentNode.querySelector('.field-error');
+                if (existingError) {
+                    existingError.remove();
+                }
+            });
+            
             input.addEventListener('blur', () => {
                 validateField(input);
             });
