--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             cursor: pointer;
             min-width: 200px;
             height: 50px;
+            width: 200px;
         }
 
         .contact-item:hover {
@@ -1138,9 +1139,11 @@
             }
 
             .contact-item {
-                width: 100%;
+                width: 200px !important;
+                min-width: 200px !important;
                 justify-content: center;
-                padding: 14px 20px;
+                padding: 16px 24px;
+                height: 50px !important;
             }
 
             .cv-download {
