--- a/index.html
+++ b/index.html
@@ -1229,11 +1229,11 @@
     <header>
         <div class="header-bg"></div>
         <div class="container">
-            <img src="https://via.placeholder.com/150" alt="Marco De Luca" class="profile-img fade-in">
-            <h1 data-i18n="name" class="fade-in delay-1">Marco De Luca</h1>
-            <p class="tagline fade-in delay-2" data-i18n="tagline">Sviluppatore/Consulente Informatico</p>
+            <img src="https://via.placeholder.com/150" alt="Marco De Luca" class="profile-img">
+            <h1 data-i18n="name">Marco De Luca</h1>
+            <p class="tagline" data-i18n="tagline">Sviluppatore/Consulente Informatico</p>
             
-            <div class="contact-info fade-in delay-3">
+            <div class="contact-info">
                 <a href="mailto:marcodeluca99@gmail.com" class="contact-item">
                     <i class="fas fa-envelope"></i>
                     <span>marcodeluca99@gmail.com</span>
