--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
         <div class="container">
             <img src="https://via.placeholder.com/150" alt="Marco De Luca" class="profile-img">
             <h1 data-i18n="name">Marco De Luca</h1>
-            <p class="tagline" data-i18n="tagline">Sviluppatore/Consulente Informatico</p>
+            <p class="tagline" data-i18n="tagline">Consulente IT | Sviluppatore Web | Specialista in Sicurezza Informatica</p>
             
             <div class="contact-info">
                 <a href="mailto:marcodeluca99@gmail.com" class="contact-item">
@@ -1613,7 +1613,7 @@
         const translations = {
             'it': {
                 'name': 'Marco De Luca',
-                'tagline': 'Sviluppatore/Consulente Informatico',
+                'tagline': 'Consulente IT | Sviluppatore Web | Specialista in Sicurezza Informatica',
                 'location': 'Lanciano, Italia',
                 'about.title': 'Profilo Professionale',
                 'about.description': 'Professionista IT con solida formazione in Sicurezza Informatica e sviluppo software. Specializzato nella creazione di soluzioni tecnologiche innovative e sicure, con particolare attenzione alla qualità del codice e alla protezione dei dati. Esperienza consolidata in consulenza IT e sviluppo di applicazioni enterprise, sempre con un approccio metodico e orientato all\'eccellenza.',
@@ -1654,7 +1654,7 @@
             },
             'en': {
                 'name': 'Marco De Luca',
-                'tagline': 'IT Developer/Consultant',
+                'tagline': 'IT Consultant | Web Developer | Cybersecurity Specialist',
                 'location': 'Lanciano, Italy',
                 'about.title': 'Professional Profile',
                 'about.description': 'IT professional with solid background in Cybersecurity and software development. Specialized in creating innovative and secure technological solutions, with particular attention to code quality and data protection. Consolidated experience in IT consulting and enterprise application development, always with a methodical approach oriented towards excellence.',
