--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio professionale di Marco De Luca, Sviluppatore Java e Security Specialist">
     <meta name="keywords" content="sviluppatore java, security specialist, portfolio, curriculum, marco de luca">
-    <title>Marco De Luca | Sviluppatore & Security Specialist</title>
+    <title>Marco De Luca - IT Consultant | Web Developer | Cybersecurity Specialist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
