--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
             <i class="fas fa-moon"></i>
         </button>
         <button id="languageToggle" class="toggle-btn" aria-label="Toggle language">
-            <i class="fas fa-flag"></i>
+            <span>IT</span>
         </button>
     </div>
 
@@ -1718,10 +1718,10 @@
         function updateLanguageIcon(lang) {
             const languageToggle = document.getElementById('languageToggle');
             if (lang === 'it') {
-                languageToggle.innerHTML = '<i class="fas fa-flag"></i>';
+                languageToggle.innerHTML = '<span>IT</span>';
                 languageToggle.setAttribute('aria-label', 'Switch to English');
             } else {
-                languageToggle.innerHTML = '<i class="fas fa-flag-usa"></i>';
+                languageToggle.innerHTML = '<span>EN</span>';
                 languageToggle.setAttribute('aria-label', 'Passa all\'Italiano');
             }
         }
