--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
         }
 
+
+
         /* Navigation */
         .nav-container {
             position: fixed;
@@ -889,6 +891,8 @@
             justify-content: center;
         }
 
+
+
         /* Footer */
         footer {
             background: var(--gradient-primary);
@@ -936,12 +940,42 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
             transition: all 0.3s ease;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+            text-decoration: none;
         }
 
         .social-links a:hover {
             background: rgba(255, 255, 255, 0.25);
             transform: translateY(-8px) scale(1.1);
             box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+        }
+
+        .pec-link {
+            position: relative;
+        }
+
+        .pec-link i {
+            font-size: 1.4rem;
+        }
+
+        .pec-badge {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background: var(--primary);
+            color: white;
+            border-radius: 8px;
+            padding: 2px 6px;
+            font-size: 0.5rem;
+            font-weight: 700;
+            font-family: 'JetBrains Mono', monospace;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+            white-space: nowrap;
+        }
+
+        .pec-link:hover .pec-badge {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         .copyright {
@@ -1587,30 +1621,22 @@
                 <div id="formMessage" class="form-message"></div>
             </div>
             
-            <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 40px;" class="fade-in delay-2">
-                <a href="mailto:marcodeluca99@gmail.com" class="btn btn-outline contact-btn">
-                    <i class="fas fa-envelope"></i> <span data-i18n="contact.email">Email</span>
-                </a>
-                <a href="tel:+393286483074" class="btn btn-outline contact-btn">
-                    <i class="fas fa-phone"></i> <span data-i18n="contact.phone">Telefono</span>
-                </a>
-                <a href="https://wa.me/393286483074" class="btn btn-outline contact-btn">
-                    <i class="fab fa-whatsapp"></i> WhatsApp
-                </a>
-                <a href="https://www.linkedin.com/" class="btn btn-outline contact-btn" target="_blank">
-                    <i class="fab fa-linkedin-in"></i> LinkedIn
-                </a>
-            </div>
+
         </section>
     </main>
     
     <footer>
         <div class="container">
             <div class="social-links">
+                <a href="mailto:marcodeluca99@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:marcodeluca99@pec.it" aria-label="PEC" class="pec-link">
+                    <i class="fas fa-envelope"></i>
+                    <span class="pec-badge">PEC</span>
+                </a>
+                <a href="tel:+393286483074" aria-label="Telefono"><i class="fas fa-phone"></i></a>
+                <a href="https://wa.me/393286483074" aria-label="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://www.linkedin.com/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com" aria-label="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://twitter.com/" aria-label="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="mailto:marcodeluca99@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
             <p class="copyright" data-i18n="footer.copyright">© 2024 Marco De Luca. P.IVA: IT02840600692. Tutti i diritti riservati.</p>
         </div>
