--- a/index.html
+++ b/index.html
@@ -1323,11 +1323,11 @@
             <div class="section-header">
                 <h2 data-i18n="about.title" class="fade-in">Profilo Professionale</h2>
                 <p data-i18n="about.description" class="fade-in delay-1" style="max-width: 700px; margin: 0 auto;">
-                    Professionista IT con solida formazione in Sicurezza Informatica e sviluppo software. 
-                    Specializzato nella creazione di soluzioni tecnologiche innovative e sicure, con particolare 
-                    attenzione alla qualità del codice e alla protezione dei dati. Esperienza consolidata 
-                    in consulenza IT e sviluppo di applicazioni enterprise, sempre con un approccio 
-                    metodico e orientato all'eccellenza.
+                    Con una laurea in Informatica e un percorso di specializzazione in Sicurezza Informatica, 
+                    ho sviluppato competenze solide in programmazione Java e tecnologie web. Attualmente 
+                    lavoro come consulente IT e facilitatore digitale, combinando sviluppo di siti web, 
+                    assistenza tecnica e supporto alla digitalizzazione. Il mio approccio si basa su 
+                    metodologie strutturate e una costante attitudine all'innovazione tecnologica.
                 </p>
             </div>
             
@@ -1676,7 +1676,7 @@
                 'tagline': 'Consulente IT | Sviluppatore Web | Specialista in Sicurezza Informatica',
                 'location': 'Lanciano, Italia',
                 'about.title': 'Profilo Professionale',
-                'about.description': 'Professionista IT con solida formazione in Sicurezza Informatica e sviluppo software. Specializzato nella creazione di soluzioni tecnologiche innovative e sicure, con particolare attenzione alla qualità del codice e alla protezione dei dati. Esperienza consolidata in consulenza IT e sviluppo di applicazioni enterprise, sempre con un approccio metodico e orientato all\'eccellenza.',
+                'about.description': 'Con una laurea in Informatica e un percorso di specializzazione in Sicurezza Informatica, ho sviluppato competenze solide in programmazione Java e tecnologie web. Attualmente lavoro come consulente IT e facilitatore digitale, combinando sviluppo di siti web, assistenza tecnica e supporto alla digitalizzazione. Il mio approccio si basa su metodologie strutturate e una costante attitudine all\'innovazione tecnologica.',
                 'experience.title': 'Esperienze Professionali',
                 'experience.job1.title': 'Consulente Informatico',
                 'experience.job1.date': '2025 - Attuale',
@@ -1717,7 +1717,7 @@
                 'tagline': 'IT Consultant | Web Developer | Cybersecurity Specialist',
                 'location': 'Lanciano, Italy',
                 'about.title': 'Professional Profile',
-                'about.description': 'IT professional with solid background in Cybersecurity and software development. Specialized in creating innovative and secure technological solutions, with particular attention to code quality and data protection. Consolidated experience in IT consulting and enterprise application development, always with a methodical approach oriented towards excellence.',
+                'about.description': 'With a degree in Computer Science and a specialization path in Cybersecurity, I have developed solid skills in Java programming and web technologies. Currently working as an IT consultant and digital facilitator, combining web development, technical assistance and digitalization support. My approach is based on structured methodologies and a constant attitude towards technological innovation.',
                 'experience.title': 'Professional Experience',
                 'experience.job1.title': 'IT Consultant',
                 'experience.job1.date': '2025 - Present',
