--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@
         <section id="about">
             <div class="section-header">
                 <h2 data-i18n="about.title" class="fade-in">Profilo Professionale</h2>
-                <p data-i18n="about.description" class="fade-in delay-1" style="max-width: 700px; margin: 0 auto;">
+                <p data-i18n="about.description" class="fade-in delay-1" style="max-width: 700px; margin: 0 auto; margin-top: 30px;">
                     Con una laurea in Informatica e un percorso di specializzazione in Sicurezza Informatica, 
                     ho sviluppato competenze solide in programmazione Java e tecnologie web. Attualmente 
                     lavoro come consulente IT e facilitatore digitale, combinando sviluppo di siti web, 
