--- a/index.html
+++ b/index.html
@@ -1344,7 +1344,9 @@
                     <h3 data-i18n="experience.job1.title">Consulente Informatico</h3>
                     <h4>Abruzzo Progetti S.p.A. | <span data-i18n="experience.job1.date">2025 - Attuale</span></h4>
                     <p data-i18n="experience.job1.description">
-                        Incarico professionale nell'ambito del progetto "Rete di Servizi di Facilitazione Digitale", finanziato dal PNRR.
+                        Incarico professionale nell'ambito del progetto "Rete di Servizi di Facilitazione Digitale", 
+                        finanziato dal PNRR. Supporto alla digitalizzazione e consulenza tecnologica per 
+                        enti pubblici e privati, con focus su cybersecurity e innovazione digitale.
                     </p>
                     <div class="skills-list">
                         <span class="skill-tag">Consulenza IT</span>
@@ -1357,12 +1359,12 @@
                 <div class="card fade-in delay-2">
                     <h3 data-i18n="experience.job2.title">Junior Java Developer</h3>
                     <h4>CGM Consulting S.r.l | 2024</h4>
-                    <ul>
-                        <li data-i18n="experience.job2.point1">Sviluppo applicazione Spring Boot con Spring Security</li>
-                        <li data-i18n="experience.job2.point2">Autenticazione tramite provider esterni (Firebase)</li>
-                        <li data-i18n="experience.job2.point3">Criptazione/decriptazione dati in MySQL</li>
-                        <li>Implementazione API RESTful</li>
-                    </ul>
+                    <p data-i18n="experience.job2.description">
+                        Sviluppo di applicazioni enterprise con Spring Boot e Spring Security, 
+                        implementazione di sistemi di autenticazione tramite provider esterni come Firebase, 
+                        gestione di database MySQL con criptazione dei dati sensibili e creazione di API RESTful 
+                        per l'integrazione di sistemi complessi.
+                    </p>
                     <div class="skills-list">
                         <span class="skill-tag">Java</span>
                         <span class="skill-tag">Spring Boot</span>
@@ -1373,15 +1375,12 @@
 
                 <div class="card slide-in-right delay-3">
                     <h3 data-i18n="experience.job3.title">Sviluppatore Web Freelance</h3>
-                    <h4>NurSind Chieti | 2024</h4>
+                    <h4>2024 - Attuale</h4>
                     <p data-i18n="experience.job3.description">
-                        Progettazione e sviluppo sito web con HTML, CSS, JavaScript e WordPress.
+                        Progettazione e sviluppo di siti web personalizzati utilizzando HTML, CSS, JavaScript e WordPress. 
+                        Creazione di design responsive ottimizzati per dispositivi mobili, integrazione di sistemi 
+                        di pagamento e ottimizzazione SEO per migliorare la visibilità online dei clienti.
                     </p>
-                    <ul>
-                        <li>Design responsive e ottimizzato per mobile</li>
-                        <li>Integrazione con sistemi di pagamento</li>
-                        <li>Ottimizzazione SEO</li>
-                    </ul>
                     <div class="skills-list">
                         <span class="skill-tag">HTML/CSS</span>
                         <span class="skill-tag">JavaScript</span>
@@ -1680,13 +1679,11 @@
                 'experience.title': 'Esperienze Professionali',
                 'experience.job1.title': 'Consulente Informatico',
                 'experience.job1.date': '2025 - Attuale',
-                'experience.job1.description': 'Incarico professionale nell\'ambito del progetto "Rete di Servizi di Facilitazione Digitale", finanziato dal PNRR.',
+                'experience.job1.description': 'Incarico professionale nell\'ambito del progetto "Rete di Servizi di Facilitazione Digitale", finanziato dal PNRR. Supporto alla digitalizzazione e consulenza tecnologica per enti pubblici e privati, con focus su cybersecurity e innovazione digitale.',
                 'experience.job2.title': 'Junior Java Developer',
-                'experience.job2.point1': 'Sviluppo applicazione Spring Boot con Spring Security',
-                'experience.job2.point2': 'Autenticazione tramite provider esterni (Firebase)',
-                'experience.job2.point3': 'Criptazione/decriptazione dati in MySQL',
+                'experience.job2.description': 'Sviluppo di applicazioni enterprise con Spring Boot e Spring Security, implementazione di sistemi di autenticazione tramite provider esterni come Firebase, gestione di database MySQL con criptazione dei dati sensibili e creazione di API RESTful per l\'integrazione di sistemi complessi.',
                 'experience.job3.title': 'Sviluppatore Web Freelance',
-                'experience.job3.description': 'Progettazione e sviluppo sito web con HTML, CSS, JavaScript e WordPress.',
+                'experience.job3.description': 'Progettazione e sviluppo di siti web personalizzati utilizzando HTML, CSS, JavaScript e WordPress. Creazione di design responsive ottimizzati per dispositivi mobili, integrazione di sistemi di pagamento e ottimizzazione SEO per migliorare la visibilità online dei clienti.',
                 'education.title': 'Formazione',
                 'education.edu1.title': 'Laurea Magistrale in Sicurezza informatica',
                 'education.edu1.date': '2024 - Attuale',
@@ -1721,13 +1718,11 @@
                 'experience.title': 'Professional Experience',
                 'experience.job1.title': 'IT Consultant',
                 'experience.job1.date': '2025 - Present',
-                'experience.job1.description': 'Professional assignment within the "Digital Facilitation Services Network" project, funded by PNRR.',
+                'experience.job1.description': 'Professional assignment within the "Digital Facilitation Services Network" project, funded by PNRR. Digitalization support and technology consulting for public and private entities, with focus on cybersecurity and digital innovation.',
                 'experience.job2.title': 'Junior Java Developer',
-                'experience.job2.point1': 'Spring Boot application development with Spring Security',
-                'experience.job2.point2': 'Authentication via external providers (Firebase)',
-                'experience.job2.point3': 'Data encryption/decryption in MySQL',
+                'experience.job2.description': 'Development of enterprise applications with Spring Boot and Spring Security, implementation of authentication systems via external providers such as Firebase, MySQL database management with sensitive data encryption and creation of RESTful APIs for complex system integration.',
                 'experience.job3.title': 'Freelance Web Developer',
-                'experience.job3.description': 'Design and development of websites with HTML, CSS, JavaScript and WordPress.',
+                'experience.job3.description': 'Design and development of custom websites using HTML, CSS, JavaScript and WordPress. Creation of responsive designs optimized for mobile devices, payment system integration and SEO optimization to improve clients\' online visibility.',
                 'education.title': 'Education',
                 'education.edu1.title': 'Master\'s Degree in Cybersecurity',
                 'education.edu1.date': '2024 - Present',
