--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,24 @@
             .contact-form {
                 padding: 30px 24px;
             }
+
+            .social-links {
+                gap: 20px;
+            }
+
+            .social-links a {
+                width: 58px;
+                height: 58px;
+                font-size: 1.35rem;
+            }
+
+            .pec-badge {
+                width: 19px;
+                height: 19px;
+                font-size: 0.55rem;
+                top: 4px;
+                right: 4px;
+            }
         }
 
         @media (max-width: 480px) {
@@ -1236,13 +1254,24 @@
             }
 
             .social-links {
-                gap: 16px;
+                gap: 12px;
+                flex-wrap: wrap;
+                justify-content: center;
             }
 
             .social-links a {
-                width: 50px;
-                height: 50px;
-                font-size: 1.2rem;
+                width: 55px;
+                height: 55px;
+                font-size: 1.3rem;
+                margin: 4px;
+            }
+
+            .pec-badge {
+                width: 18px;
+                height: 18px;
+                font-size: 0.5rem;
+                top: 3px;
+                right: 3px;
             }
 
             .contact-form {
@@ -1378,8 +1407,7 @@
                     <h4>2024 - Attuale</h4>
                     <p data-i18n="experience.job3.description">
                         Progettazione e sviluppo di siti web personalizzati utilizzando HTML, CSS, JavaScript e WordPress. 
-                        Creazione di design responsive ottimizzati per dispositivi mobili, integrazione di sistemi 
-                        di pagamento e ottimizzazione SEO per migliorare la visibilità online dei clienti.
+                        Creazione di design responsive ottimizzati per dispositivi mobili, ottimizzazione SEO per migliorare la visibilità online dei clienti.
                     </p>
                     <div class="skills-list">
                         <span class="skill-tag">HTML/CSS</span>
@@ -1722,7 +1750,7 @@
                 'experience.job2.title': 'Junior Java Developer',
                 'experience.job2.description': 'Development of enterprise applications with Spring Boot and Spring Security, implementation of authentication systems via external providers such as Firebase, MySQL database management with sensitive data encryption and creation of RESTful APIs for complex system integration.',
                 'experience.job3.title': 'Freelance Web Developer',
-                'experience.job3.description': 'Design and development of custom websites using HTML, CSS, JavaScript and WordPress. Creation of responsive designs optimized for mobile devices, payment system integration and SEO optimization to improve clients\' online visibility.',
+                'experience.job3.description': 'Design and development of custom websites using HTML, CSS, JavaScript and WordPress. Creation of responsive designs optimized for mobile devices, SEO optimization to improve clients\' online visibility.',
                 'education.title': 'Education',
                 'education.edu1.title': 'Master\'s Degree in Cybersecurity',
                 'education.edu1.date': '2024 - Present',
