--- a/index.html
+++ b/index.html
@@ -1197,11 +1197,12 @@
             }
 
             .pec-badge {
-                width: 19px;
-                height: 19px;
-                font-size: 0.55rem;
-                top: 4px;
-                right: 4px;
+                width: 17px;
+                height: 17px;
+                font-size: 0.5rem;
+                top: 3px;
+                right: 3px;
+                padding: 1px 4px;
             }
         }
 
@@ -1267,11 +1268,12 @@
             }
 
             .pec-badge {
-                width: 18px;
-                height: 18px;
-                font-size: 0.5rem;
-                top: 3px;
-                right: 3px;
+                width: 16px;
+                height: 16px;
+                font-size: 0.45rem;
+                top: 2px;
+                right: 2px;
+                padding: 1px 3px;
             }
 
             .contact-form {
