--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
         /* Progress bars */
         .progress-container {
             margin-bottom: 24px;
-            text-align: center;
+            text-align: left;
         }
 
         .progress-label {
