--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,6 @@
                 <a href="#experience" class="nav-link">Esperienze</a>
                 <a href="#education" class="nav-link">Formazione</a>
                 <a href="#skills" class="nav-link">Competenze</a>
-                <a href="#contact" class="nav-link">Contatti</a>
             </div>
         </nav>
     </div>
@@ -1419,7 +1418,7 @@
     <header>
         <div class="header-bg"></div>
         <div class="container">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop&crop=face" alt="Marco De Luca" class="profile-img">
+            <img src="https://via.placeholder.com/180x180/667eea/ffffff?text=MD" alt="Marco De Luca" class="profile-img">
             <h1 data-i18n="name">Marco De Luca</h1>
             <p class="tagline" data-i18n="tagline">Consulente IT | Sviluppatore Web | Specialista in Sicurezza Informatica</p>
             
@@ -1697,16 +1696,7 @@
             </div>
         </section>
 
-        <!-- Sezione CV Download -->
-        <section id="cv">
-            <div class="cv-download animate-on-scroll">
-                <h3 data-i18n="cv.title">Curriculum Vitae</h3>
-                <p data-i18n="cv.description">Scarica il mio CV completo in formato PDF per maggiori dettagli sulla mia formazione ed esperienza professionale.</p>
-                <a href="#" class="btn btn-primary" onclick="alert(translations[currentLang]['cv.alert']);">
-                    <i class="fas fa-download"></i> <span data-i18n="cv.button">Scarica CV</span>
-                </a>
-            </div>
-        </section>
+
         
 
     </main>
@@ -1751,8 +1741,6 @@
                 </a>
                 <a href="tel:+393286483074" aria-label="Chiama +39 328 648 3074"><i class="fas fa-phone"></i></a>
                 <a href="https://wa.me/393286483074" aria-label="Contatta su WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://www.linkedin.com/in/marco-de-luca-99" aria-label="Profilo LinkedIn di Marco De Luca" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/marcodeluca99" aria-label="Profilo GitHub di Marco De Luca" target="_blank"><i class="fab fa-github"></i></a>
             </div>
             <p class="copyright animate-on-scroll" data-i18n="footer.copyright">© 2025 Marco De Luca. P.IVA: IT02840600692. Tutti i diritti riservati.</p>
         </div>
@@ -1821,9 +1809,6 @@
                 'languages.lang1.level': 'Madrelingua',
                 'languages.lang2': 'Inglese',
                 'languages.lang3': 'Spagnolo',
-                'cv.title': 'Curriculum Vitae',
-                'cv.description': 'Scarica il mio CV completo in formato PDF per maggiori dettagli sulla mia formazione ed esperienza professionale.',
-                'cv.button': 'Scarica CV',
                 'contact.title': 'Contattami',
                 'contact.email': 'Email',
                 'contact.phone': 'Telefono',
@@ -1838,7 +1823,6 @@
                 'form.error.required': 'Per favore compila tutti i campi obbligatori.',
                 'form.error.message': 'Il messaggio deve contenere almeno 10 caratteri.',
                 'form.error.email': 'Per favore inserisci un indirizzo email valido.',
-                'cv.alert': 'CV disponibile su richiesta. Contattami via email per ricevere una copia.',
                 'validation.name': 'Il nome deve contenere almeno 2 caratteri.',
                 'validation.email': 'Inserisci un indirizzo email valido.',
                 'validation.subject': 'L\'oggetto deve contenere almeno 3 caratteri.',
@@ -1875,9 +1859,6 @@
                 'languages.lang1.level': 'Native',
                 'languages.lang2': 'English',
                 'languages.lang3': 'Spanish',
-                'cv.title': 'Curriculum Vitae',
-                'cv.description': 'Download my complete CV in PDF format for more details about my education and professional experience.',
-                'cv.button': 'Download CV',
                 'contact.title': 'Contact Me',
                 'contact.email': 'Email',
                 'contact.phone': 'Phone',
@@ -1892,7 +1873,6 @@
                 'form.error.required': 'Please fill in all required fields.',
                 'form.error.message': 'The message must contain at least 10 characters.',
                 'form.error.email': 'Please enter a valid email address.',
-                'cv.alert': 'CV available upon request. Contact me via email to receive a copy.',
                 'validation.name': 'The name must contain at least 2 characters.',
                 'validation.email': 'Please enter a valid email address.',
                 'validation.subject': 'The subject must contain at least 3 characters.',
