--- a/index.html
+++ b/index.html
@@ -1395,6 +1395,7 @@
                 <a href="#experience" class="nav-link">Esperienze</a>
                 <a href="#education" class="nav-link">Formazione</a>
                 <a href="#skills" class="nav-link">Competenze</a>
+                <a href="#cv" class="nav-link">CV</a>
             </div>
         </nav>
     </div>
@@ -1696,6 +1697,16 @@
             </div>
         </section>
 
+        <!-- Sezione CV Download -->
+        <section id="cv">
+            <div class="cv-download animate-on-scroll">
+                <h3 data-i18n="cv.title">Curriculum Vitae</h3>
+                <p data-i18n="cv.description">Scarica il mio CV completo in formato PDF per maggiori dettagli sulla mia formazione ed esperienza professionale.</p>
+                <a href="#" class="btn btn-primary" onclick="alert(translations[currentLang]['cv.alert']);">
+                    <i class="fas fa-download"></i> <span data-i18n="cv.button">Scarica CV</span>
+                </a>
+            </div>
+        </section>
 
         
 
@@ -1741,6 +1752,8 @@
                 </a>
                 <a href="tel:+393286483074" aria-label="Chiama +39 328 648 3074"><i class="fas fa-phone"></i></a>
                 <a href="https://wa.me/393286483074" aria-label="Contatta su WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" aria-label="LinkedIn" style="opacity: 0.5; pointer-events: none;"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" aria-label="GitHub" style="opacity: 0.5; pointer-events: none;"><i class="fab fa-github"></i></a>
             </div>
             <p class="copyright animate-on-scroll" data-i18n="footer.copyright">© 2025 Marco De Luca. P.IVA: IT02840600692. Tutti i diritti riservati.</p>
         </div>
@@ -1809,6 +1822,9 @@
                 'languages.lang1.level': 'Madrelingua',
                 'languages.lang2': 'Inglese',
                 'languages.lang3': 'Spagnolo',
+                'cv.title': 'Curriculum Vitae',
+                'cv.description': 'Scarica il mio CV completo in formato PDF per maggiori dettagli sulla mia formazione ed esperienza professionale.',
+                'cv.button': 'Scarica CV',
                 'contact.title': 'Contattami',
                 'contact.email': 'Email',
                 'contact.phone': 'Telefono',
@@ -1823,6 +1839,7 @@
                 'form.error.required': 'Per favore compila tutti i campi obbligatori.',
                 'form.error.message': 'Il messaggio deve contenere almeno 10 caratteri.',
                 'form.error.email': 'Per favore inserisci un indirizzo email valido.',
+                'cv.alert': 'CV disponibile su richiesta. Contattami via email per ricevere una copia.',
                 'validation.name': 'Il nome deve contenere almeno 2 caratteri.',
                 'validation.email': 'Inserisci un indirizzo email valido.',
                 'validation.subject': 'L\'oggetto deve contenere almeno 3 caratteri.',
@@ -1859,6 +1876,9 @@
                 'languages.lang1.level': 'Native',
                 'languages.lang2': 'English',
                 'languages.lang3': 'Spanish',
+                'cv.title': 'Curriculum Vitae',
+                'cv.description': 'Download my complete CV in PDF format for more details about my education and professional experience.',
+                'cv.button': 'Download CV',
                 'contact.title': 'Contact Me',
                 'contact.email': 'Email',
                 'contact.phone': 'Phone',
@@ -1873,6 +1893,7 @@
                 'form.error.required': 'Please fill in all required fields.',
                 'form.error.message': 'The message must contain at least 10 characters.',
                 'form.error.email': 'Please enter a valid email address.',
+                'cv.alert': 'CV available upon request. Contact me via email to receive a copy.',
                 'validation.name': 'The name must contain at least 2 characters.',
                 'validation.email': 'Please enter a valid email address.',
                 'validation.subject': 'The subject must contain at least 3 characters.',
