--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <link rel="canonical" href="https://marcodeluca.dev">
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💻</text></svg>">
-    <title>Marco De Luca - IT Consultant | Web Developer | Cybersecurity Specialist</title>
+    <title>Marco De Luca - IT Consultant | Web Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
