--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #20c997;
-            --primary-light: rgba(32, 201, 151, 0.1);
-            --secondary: #333333;
-            --accent: #f5f5f5;
-            --text: #333333;
-            --text-light: #666666;
+            --primary: #007bff;
+            --primary-light: rgba(0, 123, 255, 0.1);
+            --secondary: #0a192f;
+            --accent: #f8f9fa;
+            --text: #0a192f;
+            --text-light: #6c757d;
             --bg: #ffffff;
-            --card: #f5f5f5;
-            --border: #e0e0e0;
+            --card: #f8f9fa;
+            --border: #e9ecef;
             --shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
-            --shadow-hover: 0 20px 40px rgba(32, 201, 151, 0.15);
-            --success: #20c997;
+            --shadow-hover: 0 20px 40px rgba(0, 123, 255, 0.15);
+            --success: #28a745;
             --error: #dc3545;
-            --gradient-primary: linear-gradient(135deg, #20c997 0%, #17a2b8 100%);
-            --gradient-secondary: linear-gradient(135deg, #333333 0%, #666666 100%);
-            --gradient-accent: linear-gradient(135deg, #f5f5f5 0%, #e0e0e0 100%);
+            --gradient-primary: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            --gradient-secondary: linear-gradient(135deg, #0a192f 0%, #1a365d 100%);
+            --gradient-accent: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
         }
 
         [data-theme="dark"] {
@@ -485,7 +485,7 @@
             right: -50%;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle, rgba(32, 201, 151, 0.1) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(0, 123, 255, 0.1) 0%, transparent 70%);
             animation: float 4s ease-in-out infinite;
             z-index: 0;
         }
@@ -648,7 +648,7 @@
 
         .skill-tag:hover {
             transform: translateY(-2px) scale(1.03);
-            box-shadow: 0 6px 15px rgba(32, 201, 151, 0.4);
+            box-shadow: 0 6px 15px rgba(0, 123, 255, 0.4);
         }
 
         .skill-tag:hover::before {
@@ -698,7 +698,7 @@
             font-weight: 600;
             border: none;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 12px rgba(32, 201, 151, 0.3);
+            box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
             position: relative;
             overflow: hidden;
         }
@@ -834,12 +834,12 @@
         .btn-primary {
             background: var(--gradient-primary);
             color: white;
-            box-shadow: 0 8px 25px rgba(32, 201, 151, 0.3);
+            box-shadow: 0 8px 25px rgba(0, 123, 255, 0.3);
         }
 
         .btn-primary:hover {
             transform: translateY(-3px);
-            box-shadow: 0 12px 25px rgba(32, 201, 151, 0.4);
+            box-shadow: 0 12px 25px rgba(0, 123, 255, 0.4);
         }
 
         .btn-primary::after {
@@ -861,7 +861,7 @@
             background: transparent;
             color: var(--primary);
             border: 2px solid var(--primary);
-            box-shadow: 0 4px 15px rgba(32, 201, 151, 0.1);
+            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.1);
         }
 
         .btn-outline::before {
@@ -872,7 +872,7 @@
         .btn-outline:hover {
             color: white;
             transform: translateY(-3px);
-            box-shadow: 0 12px 25px rgba(32, 201, 151, 0.2);
+            box-shadow: 0 12px 25px rgba(0, 123, 255, 0.2);
             border-color: transparent;
         }
 
@@ -919,7 +919,7 @@
         .form-control:focus {
             outline: none;
             border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(32, 201, 151, 0.2);
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.2);
         }
 
         textarea.form-control {
@@ -1261,7 +1261,7 @@
             justify-content: center;
             font-size: 1.3rem;
             cursor: pointer;
-            box-shadow: 0 8px 25px rgba(32, 201, 151, 0.3);
+            box-shadow: 0 8px 25px rgba(0, 123, 255, 0.3);
             opacity: 0;
             visibility: hidden;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1276,7 +1276,7 @@
 
         .back-to-top:hover {
             transform: translateY(-5px) scale(1.05);
-            box-shadow: 0 10px 25px rgba(32, 201, 151, 0.4);
+            box-shadow: 0 10px 25px rgba(0, 123, 255, 0.4);
         }
 
         /* Parallax effect for header */
@@ -1359,8 +1359,8 @@
             width: 100%;
             height: 100%;
             background-image: 
-                radial-gradient(circle at 10% 20%, rgba(32, 201, 151, 0.05) 0%, transparent 20%),
-                radial-gradient(circle at 90% 80%, rgba(51, 51, 51, 0.05) 0%, transparent 20%);
+                radial-gradient(circle at 10% 20%, rgba(0, 123, 255, 0.05) 0%, transparent 20%),
+                radial-gradient(circle at 90% 80%, rgba(10, 25, 47, 0.05) 0%, transparent 20%);
             pointer-events: none;
             z-index: -1;
         }
@@ -1660,7 +1660,7 @@
     <header>
         <div class="header-bg"></div>
         <div class="container">
-            <img src="https://via.placeholder.com/180x180/20c997/ffffff?text=MD" alt="Marco De Luca" class="profile-img">
+            <img src="https://via.placeholder.com/180x180/007bff/ffffff?text=MD" alt="Marco De Luca" class="profile-img">
             <h1 data-i18n="name">Marco De Luca</h1>
             <p class="tagline" data-i18n="tagline">Consulente IT | Sviluppatore Web | Specialista in Sicurezza Informatica</p>
             
